--- a/css/style.css
+++ b/css/style.css
@@ -33,3 +33,16 @@
 	font-family: light;
 	src: url(../../assets/fonts/Lexend_Deca\ \(1\)/light);
 }
+
+main {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	background-color: var(--Very-dark-blue);
+}
+
+
+.main-card {
+	display: flex;
+}
