--- a/css/style.css
+++ b/css/style.css
@@ -46,8 +46,9 @@ main {
 .main-card {
 	display: flex;
 	background-color: var(--Dark-desaturated-blue);
-	max-width: 1000px;
+	max-width: 920px;
 	width: 100%;
+	height: fit-content;
 }
 
 
@@ -91,4 +92,21 @@ main {
 	font-size: 15px;
 	font-family: light;
 	font-weight: 100;
+}
+
+
+
+.main-img {
+	max-width: 460px;
+	width: 100%;
+
+}
+
+
+@media (max-width:850px) {
+	.main-card {
+		max-width: 400px;
+		width: 100%;
+		flex-wrap: wrap;
+	}
 }
