--- a/css/style.css
+++ b/css/style.css
@@ -99,14 +99,49 @@ main {
 .main-img {
 	max-width: 460px;
 	width: 100%;
-
 }
+
+/* .img-overlayer {
+	background-color: var(--Soft-violet);
+	opacity: 0.5;
+	max-width: 460px;
+	width: 100%;
+	max-height: 380px;
+	height: 100%;
+	position: absolute;
+} */
 
 
 @media (max-width:850px) {
 	.main-card {
-		max-width: 400px;
+		max-width: 360px;
 		width: 100%;
+		flex-wrap: wrap-reverse;
+	}
+
+	.card-content {
+		margin-left: 15px;
+	}
+
+	.title {
+		margin: 20px auto;
+		max-width: 250px;
+		text-align: center;
+	}
+
+	.content {
+		margin: auto;
+		text-align: center;
+		max-width: 330px;
+	}
+
+	.information {
 		flex-wrap: wrap;
+		max-width: 100px;
+		margin: 10px auto;
+	}
+
+	.info-no {
+		margin: 15px 0px 10px 25px;
 	}
 }
