--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,9 @@ main {
 	background-color: var(--Very-dark-blue);
 }
 
-
+.card-content {
+	flex-grow: 1;
+}
 
 .main-card {
 	display: flex;
@@ -58,7 +60,7 @@ main {
 	color: white;
 	font-size: 30px;
 	font-family: bold;
-	margin: 70px 0px 30px 50px;
+	margin: 50px 0px 30px 50px;
 	max-width: 265px;
 	font-weight: bold;
 }
@@ -70,14 +72,17 @@ main {
 
 .content {
 	color: var(--Slightly-transparent-white);
-	max-width: 410px;
+	max-width: 320px;
 	width: 70%;
 	margin-left: 50px;
 }
 
 .information {
 	display: flex;
-	margin: 70px 0px 0px 50px;
+	margin: 65px 0px 0px 50px;
+	/* padding-bottom: 2px; */
+	position: relative;
+	bottom: 15px;
 }
 
 .info-no {
@@ -97,25 +102,33 @@ main {
 }
 
 
-.card-img {}
+.card-img {
+	max-width: 400px;
+	height: 330px;
+	width: 100%;
+	/* height: 100%; */
+	position: relative;
+}
 
 
 .main-img {
-	max-width: 460px;
 	width: 100%;
+	height: 100%;
 	border-radius: 7px 7px 0px 0px;
-
+	position: absolute;
+	top: 0;
+	left: 0;
 }
 
-/* .img-overlayer {
+.img-overlayer {
 	background-color: var(--Soft-violet);
 	opacity: 0.5;
-	max-width: 460px;
 	width: 100%;
-	max-height: 380px;
 	height: 100%;
 	position: absolute;
-} */
+	top: 0;
+	left: 0;
+}
 
 
 @media (max-width:850px) {
@@ -145,7 +158,7 @@ main {
 	.information {
 		flex-wrap: wrap;
 		max-width: 100px;
-		margin: 10px auto;
+		margin: 25px auto 5px;
 	}
 
 	.info-no {
